library now supports rabbit postings in 2 ways, listening at the server side and parallel sending

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,16 +6,16 @@ set(CMAKE_CXX_STANDARD 14)
 
 
 add_executable(MT4BridgeTest MT4BridgeTest.cpp)
-target_include_directories(MT4BridgeTest PUBLIC C:/install/include)
-target_include_directories(MT4BridgeTest PUBLIC "C:/Program Files/OpenSSL-Win32/include/")
-target_link_libraries(MT4BridgeTest PUBLIC C:/install/lib/librabbitmq.4.dll.a)
+# target_include_directories(MT4BridgeTest PUBLIC C:/install/include)
+# target_include_directories(MT4BridgeTest PUBLIC "C:/Program Files/OpenSSL-Win32/include/")
+#$CMAKE_CURRENT_BINARY_DIR
+target_link_libraries(MT4BridgeTest PUBLIC c:/install/bin/libMT4Bridge.dll.a)
 
 
-add_library(MT4Bridge SHARED MT4BridgeTest.cpp MT4BridgeLibrary.cpp)
+add_library(MT4Bridge SHARED MT4BridgeLibrary.cpp AMQPConnection.cpp)
 target_include_directories(MT4Bridge PUBLIC C:/install/include)
 target_include_directories(MT4Bridge PUBLIC "C:/Program Files/OpenSSL-Win32/include/")
 
 target_link_libraries(MT4Bridge PUBLIC C:/install/lib/librabbitmq.4.dll.a)
-#target_link_libraries(MT4Bridge PUBLIC C:/install/lib/liblibrabbitmq.4.a)
 
 install(TARGETS MT4Bridge DESTINATION bin)
